samples/_failures_safe/1761637372_efa4b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e42bf601.c: In function ‘main’:
./samples/SAFE/__tmp_e42bf601.c:147:12: error: expected ‘)’ at end of input
  147 |     if (len
      |        ~   ^
      |            )
./samples/SAFE/__tmp_e42bf601.c:147:5: error: expected declaration or statement at end of input
  147 |     if (len
      |     ^~
